@@ -477,6 +477,9 @@ or subtracting from an empty counter.
 
         Insert *x* into the deque at position *i*.
 
+        If the insertion causes a bounded deque to grow beyond *maxlen*, the
+        rightmost element is then removed to restore the size limit.
+
         .. versionadded:: 3.5
 
 
